oops, forgot to add the presence subscription agent file
git-svn-id: http://svn.osafoundation.org/chandler/trunk@1107 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/application/agents/ChangeLog.txt
+++ b/chandler/application/agents/ChangeLog.txt
@@ -90,3 +90,5 @@
     * initialized the agent manager toward the end of the initialization process;
       it was being initialized before the notification manager.
       
+    * passed the actual notification object to actions instead of just the data
+    
