Added "About" page.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@1137 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/parcels/osaf/repositoryviewer/ChangeLog.txt
+++ b/chandler/parcels/osaf/repositoryviewer/ChangeLog.txt
@@ -1,3 +1,6 @@
+2003-09-11 Kaitlin Duck Sherwood <ducky@osafoundation.org>
+   * Added an "About" page
+
 2003-08-28 Katie Capps Parlante <capps@osafoundation.org>
    * Added code to list elements in a list or set in the html detail view
 
