Improved "About" page to give better explanation of how to add events.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@1139 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/parcels/osaf/calendar/ChangeLog.txt
+++ b/chandler/parcels/osaf/calendar/ChangeLog.txt
@@ -1,5 +1,9 @@
 # ChangeLog for Calendar Parcel
 
+2003-09-11 Kaitlin Duck Sherwood <ducky@osafoundation.org>
+   * Modified "About" page to give a clearer description of how
+     to add an Event.
+
 2003-09-05 Katie Capps Parlante <capps@osafoundation.org>
    * Added participant to calendar model
    * Changed table view to use wxListCtrl instead of wxGrid
