--- a/chandler/HISTORY.txt
+++ b/chandler/HISTORY.txt
@@ -2,6 +2,10 @@
 
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
+Release 0.2 (CVS tag CHANDLER_0_7) 2003-09-23
+
+- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+
 Milestone 7 (CVS tag CHANDLER_M_07) 2003-09-09
 
     Debugging:
