at Andre Francis's request, added a new action type "classmethod" where the specified        method of a specified class of a specified module is invoked.
       added an action to test the new action type.


git-svn-id: http://svn.osafoundation.org/chandler/trunk@1161 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/application/agents/ChangeLog.txt
+++ b/chandler/application/agents/ChangeLog.txt
@@ -91,4 +91,9 @@
       it was being initialized before the notification manager.
       
     * passed the actual notification object to actions instead of just the data
-    
+ 
+ 2003-09-20 Andy Hertzfeld <andy@differnet.com>
+ 
+    * added new actionType called "classMethod" where it invokes a method of a specified class
+      off a specified module.
+      
