update with unit tests
git-svn-id: http://svn.osafoundation.org/chandler/trunk@1729 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/HISTORY.txt
+++ b/chandler/HISTORY.txt
@@ -72,6 +72,8 @@ Milestone 13 (CVS tag CHANDLER_M_13) 2004-1-21
 
     * Integrated libxml2 and updated db/dbxml/xerces libraries
 
+    * Unit tests
+
     * Bug fixes
 
 
