integrated changes submitted by hazmat
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2352 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/internal/PyLucene/README
+++ b/internal/PyLucene/README
@@ -33,7 +33,7 @@
     - bunzip2 -c ../gcc-3.3.2.tar.bz2 | tar -xvf -
     - mkdir build install
     - cd build
-    - ../gcc-3.3.2/configure --enable-threads=posix --prefix=$CWD/gcc-3.3.2/install
+    - ../gcc-3.3.2/configure --enable-threads=posix --prefix=$CWD/gcc-3.3.2/install --enable-languages=c,c++,java
     - make bootstrap
     - make install
 
