fixed GCJ_HOME windows instructions
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2366 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/internal/PyLucene/README
+++ b/internal/PyLucene/README
@@ -145,7 +145,7 @@
      archives while in the d:\mingw-3.1 directory
 
   For the hardhat build to succeed you need to set the GCJ_HOME environment
-  variable to d:\mingw-3.1 (using a backslash).
+  variable to /cygdrive/d/mingw-3.1 (using a cygwin unix style path).
 
 
   Manual source code changes
