--- a/internal/PyLucene/README
+++ b/internal/PyLucene/README
@@ -144,8 +144,8 @@
    - install the three gcc components (core, g++ and java) by untarring the
      archives while in the d:\mingw-3.1 directory
 
-  For the hardhat build to succeed you need to set the GCJ_HOME environment
-  variable to /cygdrive/d/mingw-3.1 (using a cygwin unix style path).
+  You need to set the GCJ_HOME environment variable to /cygdrive/d/mingw-3.1
+  (using a cygwin unix style path).
 
 
   Manual source code changes
