--- a/chandler/ChangeLog.txt
+++ b/chandler/ChangeLog.txt
@@ -1,7 +1,7 @@
 # ChangeLog for Chandler 
 
 2004-05-14 Mark Jaffe <markie@osafoundation.org>
-   * Just noticed this file has not been updated since last August
+   * Change this file to trigger a build on tinderbox
 
 2003-08-04 Morgen Sagen <morgen@osafoundation.org>
    * The build now generates a debugging version of the "end-user" distro 
