Trigger build to test tinderbox script
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2446 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/ChangeLog.txt
+++ b/chandler/ChangeLog.txt
@@ -1,6 +1,10 @@
 # ChangeLog for Chandler 
 
 2004-05-14 Mark Jaffe <markie@osafoundation.org>
+   * Tinderbuilds seem to have stabilized, see if triggering a build on 
+     tinderbox makes a distribution
+
+2004-05-14 Mark Jaffe <markie@osafoundation.org>
    * Change this file to trigger a build on tinderbox
 
 2003-08-04 Morgen Sagen <morgen@osafoundation.org>
