Trigger a build from changelog
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2451 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/ChangeLog.txt
+++ b/chandler/ChangeLog.txt
@@ -1,5 +1,8 @@
 # ChangeLog for Chandler 
 
+2004-05-16 Mark Jaffe <markie@osafoundation.org>
+   * Try a trivial change to trigger a build
+
 2004-05-14 Mark Jaffe <markie@osafoundation.org>
    * Tinderbuilds seem to have stabilized, see if triggering a build on 
      tinderbox makes a distribution
