Update for Milestone release (we need more release info in future)
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2570 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/HISTORY.txt
+++ b/chandler/HISTORY.txt
@@ -1,6 +1,12 @@
                             Chandler Release History
 
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+Milestone 0.3.17 (CVS tag CHANDLER_0_3_17) 2004-06-01
+    * Addition of swig to our build environment
+    * Begin addition of openssl/m2crypto libs]
+    * Many chandler improvements
+    * Additional changes to follow
+
 
 Milestone 0.3.17 (CVS tag CHANDLER_0_3_17) 2004-06-01
    * Added Principal kind and type
